fix(web): fix emoji vertical align in sidebar

--- a/actor-apps/app-web/src/styles/sidebar.scss
+++ b/actor-apps/app-web/src/styles/sidebar.scss
@@ -193,7 +193,6 @@
         .emoji-outer {
           width: 20px;
           height: 20px;
-          vertical-align: text-bottom;
         }
       }
       .counter {
